objects/AlignEmp__c.object
<CustomObject>
    <fields>
        <fullName>Piki1__c</fullName>
        <label>Piki1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dream</fullName>
                </value>
                <value>
                    <fullName>ambition</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piki2__c</fullName>
        <label>Piki2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>power</fullName>
                </value>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>innocent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>piki3__c</fullName>
        <label>piki3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>math</fullName>
                </value>
                <value>
                    <fullName>sci</fullName>
                </value>
                <value>
                    <fullName>english</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AlignEmp</label>
    <nameField>
        <label>AlignEmp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlignEmps</pluralLabel>
    <recordTypes>
        <fullName>Align1</fullName>
        <active>true</active>
        <label>Align1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>